LIST OF CHANGES
---------------

 - a wrapper object npg_pipeline::product to repesent a product
 - upfront definition of all products
 - generic runfolder scaffolding for any products
 - since the top-level qc directory is no longer required, the tileviz
   directory is moved to the analysis directory
 - resuffle of roles in npg_pipeline::roles:
     npg_pipeline::roles::business::base merged into npg_pipeline::base;
     npg_pipeline::roles::business::flag_options moved to
     npg_pipeline::base::options, a number of pipeline options from other
     modules moved to this role;
     npg_pipeline::roles::accessors moved to npg_pipeline::base::config;
     helper functions moved to a new role - npg_pipeline::function::util
 - ref_adapter_pre_exec_string method renamed to repos_pre_exec_string
 - metadata_cache_dir method, formerly in npg_pipeline::roles::business::base,
   removed; npg_pipeline::function::p4_stage1_analysis module, the only user
   of this function, switched to use the relevant accessor from the
   npg_pipeline::runfolder_scaffold role
 - minor changes for bcfstats qc check
 - executor type (lsf or wr) can be specified in the configuration file
 - for wr executor, set per-job priority, increase priority for p4 stage 1
   job and its predecessors
 - correction of build method for rpt_list attribute in product
 - make bam_cluster_count_check pipeline job dependent on
     qc_spatial_filter (in function_list_central.json)
 - archival daemon - sleep for an hour after a successful submission -
     we want to avoid doing parallel s3 uploads for multiple runs
 - wr executor - explicitly propagate pipeline's environment to jobs
 - illumina archiver job:
     exclude discontinued verbose attribute and paths that are not needed
     for the minimal work this loader is doing now;
     remove LSF preexec requesting that the job is a unique runner since
     db queries are much simpler now
 - change signature of the autoqc archival job in line with extended